Clean Slate + Binary Tree LCA
Also updated .gitignore config